--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"> -->
   <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <!-- Angular -->
+  <script src="https://code.angularjs.org/1.4.2/angular.min.js"></script>
 
+</head>
+<body ng-app="localTodo">
+  <main ng-controller="MainController">
+    <h1>{{title}}</h1>
+    <hr>
+    <h2>Add a todo:</h2>
+    <form  ng-submit="addTodo()">
+      <input type="text" id="taskEntry" placeholder="Example: Take out trash">
+      <!-- <button ng-click="addTodo()">Add todo</button> -->
+      <input type="submit"  value="Add todo">
+    </form>
+    <hr>
+    <section class="todoList" ng-repeat="todo in todos track by $index">
+      <div class="todo" id="{{todo}}">{{todo}} <a href="" ng-click="deleteTodo(todo)">Delete</a></div>
+    </section>
+  </main>
 </body>
+<!-- Modules -->
+<script src="js/app.js" ></script>
+
+<!-- Controllers -->
+<script src="js/controllers/MainController.js" charset="utf-8"></script>
+
 </html>
