Add array of todos into an object. Less convoluted then spliting an array string on the commas. Todos might contain commas, need to support that.
Signed-off-by: Todd Robinson <toddsinclairrobinson@gmail.com>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input type="submit"  value="Add to-do">
     </form>
     <hr>
-    <section class="todoList" ng-repeat="todo in todos track by $index">
+    <section class="todoList" ng-repeat="todo in todos.list track by $index">
       <div class="todo" id="{{todo}}">{{todo}} <a href="" ng-click="deleteTodo(todo)">Delete</a></div>
     </section>
   </main>
